k8s/ingress/bookverse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookverse-ingress
  namespace: bookverse
spec:
  rules:
    # 1. Gateway Dashboard -> http://gateway.local/
    - host: gateway.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80

    # 2. pgAdmin Dashboard -> http://pgadmin.local/
    - host: pgadmin.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 5050

    # # 3. Grafana Monitoring -> http://grafana.local/
    # - host: grafana.local
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: monitoring-grafana
    #             port:
    #               number: 80

    # 4. Jaeger Tracing -> http://jaeger.local/
    - host: jaeger.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jaeger
                port:
                  number: 16686


    # # 4. ArgoCD  -> http://argocd.local/
    # - host: argocd.local  
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: argocd-server
    #             port:
    #               number: 443

    # 4. rabbitmq  -> http://rabbitmq.local/
    - host: rabbitmq.local  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq
                port:
                  number: 15672

    # 4. mongocompass  -> http://mongocompass.local/
    - host: mongocompass.local  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-compass-web
                port:
                  number: 8080
